--- a/emisor/base/src/main/resources/application-dev.yml
+++ b/emisor/base/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/henry
+    url: jdbc:mysql://localhost:3306/henryelectric
     username: root
     password: root
   jpa:
